[gd_scene load_steps=3 format=1]

[ext_resource path="res://scripts/base_script.gd" type="Script" id=1]

[sub_resource type="RectangleShape2D" id=1]

custom_solver_bias = 0.0
extents = Vector2( 32, 32 )

[node name="game_root" type="Node"]

script/script = ExtResource( 1 )

[node name="background" type="Control" parent="."]

editor/display_folded = true
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 40.0
margin/bottom = 40.0
__meta__ = {
"_edit_group_": true
}

[node name="TextureFrame" type="TextureFrame" parent="background"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 40.0
margin/bottom = 40.0
stretch_mode = 0

[node name="rounds" type="Control" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 40.0
margin/bottom = 40.0

[node name="round_caption" type="Label" parent="rounds"]

rect/scale = Vector2( 3, 3 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 16.0
margin/top = 16.0
margin/right = 64.0
margin/bottom = 32.0
text = "Round"
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="round_value" type="Label" parent="rounds"]

rect/scale = Vector2( 3, 3 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 144.0
margin/top = 16.0
margin/right = 160.0
margin/bottom = 32.0
text = "1"
align = 2
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="player_caption" type="Label" parent="rounds"]

rect/scale = Vector2( 3, 3 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 272.0
margin/top = 16.0
margin/right = 320.0
margin/bottom = 32.0
text = "Player"
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="player_value" type="Label" parent="rounds"]

rect/scale = Vector2( 3, 3 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 400.0
margin/top = 16.0
margin/right = 416.0
margin/bottom = 32.0
text = "1"
align = 2
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="apply_button" type="Button" parent="rounds"]

rect/scale = Vector2( 3, 3 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 528.0
margin/top = 512.0
margin/right = 576.0
margin/bottom = 532.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Apply"
flat = false

[node name="stats" type="Control" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 40.0
margin/bottom = 40.0

[node name="power_caption" type="Label" parent="stats"]

rect/scale = Vector2( 3, 3 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 672.0
margin/top = 16.0
margin/right = 763.0
margin/bottom = 32.0
text = "Power Points"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="fam_caption1" type="Label" parent="stats"]

rect/scale = Vector2( 2, 2 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 608.0
margin/top = 80.0
margin/right = 780.0
margin/bottom = 96.0
text = "P1 - House of Gillfield"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="fam_caption2" type="Label" parent="stats"]

rect/scale = Vector2( 2, 2 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 608.0
margin/top = 176.0
margin/right = 791.0
margin/bottom = 192.0
text = "P4 - House of Rainmere"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="fam_caption3" type="Label" parent="stats"]

rect/scale = Vector2( 2, 2 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 608.0
margin/top = 144.0
margin/right = 773.0
margin/bottom = 160.0
text = "P3 - House of Augustham"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="fam_caption4" type="Label" parent="stats"]

rect/scale = Vector2( 2, 2 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 608.0
margin/top = 112.0
margin/right = 768.0
margin/bottom = 128.0
text = "P2 - House of Heltook"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="points1" type="Label" parent="stats"]

rect/scale = Vector2( 2, 2 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 944.0
margin/top = 80.0
margin/right = 968.0
margin/bottom = 96.0
text = "0"
align = 2
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="points2" type="Label" parent="stats"]

rect/scale = Vector2( 2, 2 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 944.0
margin/top = 112.0
margin/right = 968.0
margin/bottom = 128.0
text = "0"
align = 2
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="points3" type="Label" parent="stats"]

rect/scale = Vector2( 2, 2 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 944.0
margin/top = 144.0
margin/right = 968.0
margin/bottom = 160.0
text = "0"
align = 2
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="points4" type="Label" parent="stats"]

rect/scale = Vector2( 2, 2 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 944.0
margin/top = 176.0
margin/right = 968.0
margin/bottom = 192.0
text = "0"
align = 2
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="distribution" type="Control" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 40.0
margin/bottom = 40.0

[node name="resources_caption" type="Label" parent="distribution"]

rect/scale = Vector2( 3, 3 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 16.0
margin/top = 80.0
margin/right = 85.0
margin/bottom = 96.0
text = "Resources"
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="res_caption1" type="Label" parent="distribution"]

rect/scale = Vector2( 2, 2 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 16.0
margin/top = 192.0
margin/right = 80.0
margin/bottom = 208.0
text = "Approval"
valign = 2
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="res_caption2" type="Label" parent="distribution"]

rect/scale = Vector2( 2, 2 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 16.0
margin/top = 288.0
margin/right = 80.0
margin/bottom = 304.0
text = "Military"
valign = 2
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="res_caption3" type="Label" parent="distribution"]

rect/scale = Vector2( 2, 2 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 16.0
margin/top = 384.0
margin/right = 80.0
margin/bottom = 400.0
text = "Food"
valign = 2
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="res_caption4" type="Label" parent="distribution"]

rect/scale = Vector2( 2, 2 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 16.0
margin/top = 480.0
margin/right = 80.0
margin/bottom = 496.0
text = "Saboteurs"
valign = 2
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="res_value1" type="Label" parent="distribution"]

rect/scale = Vector2( 2, 2 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 160.0
margin/top = 192.0
margin/right = 184.0
margin/bottom = 208.0
text = "0"
align = 1
valign = 2
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="res_value2" type="Label" parent="distribution"]

rect/scale = Vector2( 2, 2 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 160.0
margin/top = 288.0
margin/right = 184.0
margin/bottom = 304.0
text = "0"
align = 1
valign = 2
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="res_value3" type="Label" parent="distribution"]

rect/scale = Vector2( 2, 2 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 160.0
margin/top = 384.0
margin/right = 184.0
margin/bottom = 400.0
text = "0"
align = 1
valign = 2
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="res_value4" type="Label" parent="distribution"]

rect/scale = Vector2( 2, 2 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 160.0
margin/top = 480.0
margin/right = 184.0
margin/bottom = 496.0
text = "0"
align = 1
valign = 2
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="res_cost1" type="Label" parent="distribution"]

rect/scale = Vector2( 2, 2 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 240.0
margin/top = 192.0
margin/right = 264.0
margin/bottom = 208.0
text = "1"
align = 1
valign = 2
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="res_cost2" type="Label" parent="distribution"]

rect/scale = Vector2( 2, 2 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 240.0
margin/top = 288.0
margin/right = 264.0
margin/bottom = 304.0
text = "10"
align = 1
valign = 2
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="res_cost3" type="Label" parent="distribution"]

rect/scale = Vector2( 2, 2 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 240.0
margin/top = 384.0
margin/right = 264.0
margin/bottom = 400.0
text = "10"
align = 1
valign = 2
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="res_cost4" type="Label" parent="distribution"]

rect/scale = Vector2( 2, 2 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 240.0
margin/top = 480.0
margin/right = 264.0
margin/bottom = 496.0
text = "5"
align = 1
valign = 2
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="res_gain1" type="Label" parent="distribution"]

rect/scale = Vector2( 2, 2 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 320.0
margin/top = 192.0
margin/right = 344.0
margin/bottom = 208.0
text = "5"
align = 1
valign = 2
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="res_gain2" type="Label" parent="distribution"]

rect/scale = Vector2( 2, 2 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 320.0
margin/top = 288.0
margin/right = 344.0
margin/bottom = 304.0
text = "2"
align = 1
valign = 2
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="res_gain3" type="Label" parent="distribution"]

rect/scale = Vector2( 2, 2 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 320.0
margin/top = 384.0
margin/right = 344.0
margin/bottom = 400.0
text = "1"
align = 1
valign = 2
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="res_gain4" type="Label" parent="distribution"]

rect/scale = Vector2( 2, 2 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 320.0
margin/top = 480.0
margin/right = 344.0
margin/bottom = 496.0
text = "-20"
align = 1
valign = 2
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="res_total1" type="Label" parent="distribution"]

rect/scale = Vector2( 2, 2 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 400.0
margin/top = 192.0
margin/right = 424.0
margin/bottom = 208.0
text = "0"
align = 1
valign = 2
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="res_total2" type="Label" parent="distribution"]

rect/scale = Vector2( 2, 2 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 400.0
margin/top = 288.0
margin/right = 424.0
margin/bottom = 304.0
text = "0"
align = 1
valign = 2
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="res_total3" type="Label" parent="distribution"]

rect/scale = Vector2( 2, 2 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 400.0
margin/top = 384.0
margin/right = 424.0
margin/bottom = 400.0
text = "0"
align = 1
valign = 2
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="res_total4" type="Label" parent="distribution"]

rect/scale = Vector2( 2, 2 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 400.0
margin/top = 480.0
margin/right = 424.0
margin/bottom = 496.0
text = "0"
align = 1
valign = 2
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="value_caption" type="Label" parent="distribution"]

rect/scale = Vector2( 2, 2 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 144.0
margin/top = 160.0
margin/right = 184.0
margin/bottom = 176.0
text = "Value"
align = 1
valign = 2
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="cost_caption" type="Label" parent="distribution"]

rect/scale = Vector2( 2, 2 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 224.0
margin/top = 160.0
margin/right = 264.0
margin/bottom = 176.0
text = "Cost"
align = 1
valign = 2
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="power_caption" type="Label" parent="distribution"]

rect/scale = Vector2( 2, 2 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 304.0
margin/top = 160.0
margin/right = 344.0
margin/bottom = 176.0
text = "Power"
align = 1
valign = 2
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="total_caption" type="Label" parent="distribution"]

rect/scale = Vector2( 2, 2 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 384.0
margin/top = 160.0
margin/right = 424.0
margin/bottom = 176.0
text = "Total"
align = 1
valign = 2
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="player_list" type="ItemList" parent="distribution"]

rect/scale = Vector2( 2, 2 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 480.0
margin/top = 320.0
margin/right = 600.0
margin/bottom = 400.0

[node name="roll" type="Control" parent="."]

editor/display_folded = true
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 40.0
margin/bottom = 40.0

[node name="roll_button" type="Button" parent="roll"]

rect/scale = Vector2( 3, 3 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 784.0
margin/top = 512.0
margin/right = 837.0
margin/bottom = 532.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Roll"
flat = false

[node name="roll_caption" type="Label" parent="roll"]

rect/scale = Vector2( 2, 2 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 784.0
margin/top = 320.0
margin/right = 832.0
margin/bottom = 336.0
text = "Result:"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="result1" type="Label" parent="roll"]

rect/scale = Vector2( 2, 2 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 736.0
margin/top = 368.0
margin/right = 752.0
margin/bottom = 384.0
text = "0"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="result2" type="Label" parent="roll"]

rect/scale = Vector2( 2, 2 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 784.0
margin/top = 368.0
margin/right = 800.0
margin/bottom = 384.0
text = "0"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="result3" type="Label" parent="roll"]

rect/scale = Vector2( 2, 2 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 832.0
margin/top = 368.0
margin/right = 848.0
margin/bottom = 384.0
text = "0"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="result4" type="Label" parent="roll"]

rect/scale = Vector2( 2, 2 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 880.0
margin/top = 368.0
margin/right = 896.0
margin/bottom = 384.0
text = "0"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="result5" type="Label" parent="roll"]

rect/scale = Vector2( 2, 2 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 928.0
margin/top = 368.0
margin/right = 944.0
margin/bottom = 384.0
text = "0"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="result6" type="Label" parent="roll"]

rect/scale = Vector2( 2, 2 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 976.0
margin/top = 368.0
margin/right = 992.0
margin/bottom = 384.0
text = "0"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="result_total" type="Label" parent="roll"]

rect/scale = Vector2( 2, 2 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 880.0
margin/top = 320.0
margin/right = 904.0
margin/bottom = 336.0
text = "0"
align = 2
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="dices" type="Node2D" parent="."]

[node name="areas" type="Node2D" parent="dices"]

[node name="approval_area" type="Area2D" parent="dices/areas"]

editor/display_folded = true
transform/pos = Vector2( 240, 256 )
transform/scale = Vector2( 7, 1 )
input/pickable = true
shapes/0/shape = SubResource( 1 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 0, 0 )
shapes/0/trigger = false
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
__meta__ = {
"_edit_group_": true
}

[node name="col_shape" type="CollisionShape2D" parent="dices/areas/approval_area"]

shape = SubResource( 1 )
trigger = false
_update_shape_index = 0

[node name="military_area" type="Area2D" parent="dices/areas"]

editor/display_folded = true
transform/pos = Vector2( 240, 352 )
transform/scale = Vector2( 7, 1 )
input/pickable = true
shapes/0/shape = SubResource( 1 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 0, 0 )
shapes/0/trigger = false
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
__meta__ = {
"_edit_group_": true
}

[node name="col_shape" type="CollisionShape2D" parent="dices/areas/military_area"]

shape = SubResource( 1 )
trigger = false
_update_shape_index = 0

[node name="food_area" type="Area2D" parent="dices/areas"]

editor/display_folded = true
transform/pos = Vector2( 240, 448 )
transform/scale = Vector2( 7, 1 )
input/pickable = true
shapes/0/shape = SubResource( 1 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 0, 0 )
shapes/0/trigger = false
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
__meta__ = {
"_edit_group_": true
}

[node name="col_shape" type="CollisionShape2D" parent="dices/areas/food_area"]

shape = SubResource( 1 )
trigger = false
_update_shape_index = 0

[node name="saboteurs_area" type="Area2D" parent="dices/areas"]

editor/display_folded = true
transform/pos = Vector2( 240, 544 )
transform/scale = Vector2( 7, 1 )
input/pickable = true
shapes/0/shape = SubResource( 1 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 0, 0 )
shapes/0/trigger = false
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
__meta__ = {
"_edit_group_": true
}

[node name="col_shape" type="CollisionShape2D" parent="dices/areas/saboteurs_area"]

shape = SubResource( 1 )
trigger = false
_update_shape_index = 0

[node name="all_dice" type="Node2D" parent="dices"]

[connection signal="pressed" from="rounds/apply_button" to="." method="_on_apply_button_pressed"]

[connection signal="pressed" from="roll/roll_button" to="." method="_on_roll_button_pressed"]


